compatibility-tests/compile-fail/tests/ui/attribute-duplication.stderr
error: Multiple 'visibility' attributes are not supported on an error enum; found a duplicate here:
 --> $DIR/attribute-duplication.rs:7:10
  |
7 |     enum EnumError {
  |          ^^^^^^^^^

error: Multiple 'source' attributes are not supported on one field; found a duplicate here:
  --> $DIR/attribute-duplication.rs:25:13
   |
25 |             source4: String,
   |             ^^^^^^^

error: Multiple 'backtrace' attributes are not supported on one field; found a duplicate here:
  --> $DIR/attribute-duplication.rs:34:13
   |
34 |             backtrace3: String,
   |             ^^^^^^^^^^

error: Multiple 'source' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:18:13
   |
18 |             source2: Box<EnumError>,
   |             ^^^^^^^

error: Multiple 'source' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:21:13
   |
21 |             source3: String,
   |             ^^^^^^^

error: Multiple 'source' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:25:13
   |
25 |             source4: String,
   |             ^^^^^^^

error: Multiple 'backtrace' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:30:13
   |
30 |             backtrace2: String,
   |             ^^^^^^^^^^

error: Multiple 'backtrace' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:34:13
   |
34 |             backtrace3: String,
   |             ^^^^^^^^^^

error: Multiple 'backtrace(delegate)' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:18:13
   |
18 |             source2: Box<EnumError>,
   |             ^^^^^^^

error: Multiple 'backtrace(delegate)' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:21:13
   |
21 |             source3: String,
   |             ^^^^^^^

error: Multiple 'backtrace(delegate)' attributes are not supported within an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:25:13
   |
25 |             source4: String,
   |             ^^^^^^^

error: Cannot have 'backtrace' and 'backtrace(delegate)' fields in the same error variant
  --> $DIR/attribute-duplication.rs:28:13
   |
28 |             backtrace1: String,
   |             ^^^^^^^^^^

error: Cannot have 'backtrace' and 'backtrace(delegate)' fields in the same error variant
  --> $DIR/attribute-duplication.rs:15:13
   |
15 |             source: Box<EnumError>,
   |             ^^^^^^

error: Multiple 'display' attributes are not supported on an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:12:9
   |
12 |         AVariant {
   |         ^^^^^^^^

error: Multiple 'visibility' attributes are not supported on an error variant; found a duplicate here:
  --> $DIR/attribute-duplication.rs:12:9
   |
12 |         AVariant {
   |         ^^^^^^^^

error: Multiple 'source(from)' attributes are not supported on an error struct; found a duplicate here:
  --> $DIR/attribute-duplication.rs:47:25
   |
47 |     #[snafu(source(from(UsableError, Box::new)))]
   |                         ^^^^^^^^^^^
